--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOATLAS_URI = mongodb+srv://nacer:09981183@cluster0.xqq7pfw.mongodb.net/?retryWrites=true&w=majority
+MONGOATLAS_URI = mongodb+srv://<name>:<password>@<none>/?retryWrites=true&w=majority
